# Agentic-AI

./: .gitignore  app.html  app.py  chat_history.md  download_model.py  gpu.ipynb  quiz_questions.md  requirements.txt  screener_result.json  yt_download.py  yt_download_app.py
MCP/: README.md  requirements.txt
MCP/simple_server_setup/: client_sse.py  client_stdio.py  server.py
PineconeRAG/: app.ipynb  requirements.txt
StockMCP/: agent.py  pyproject.toml  requirements.txt  server.py
adsnapStudio/adsnap-studio/: app.py
app/: handoff_tool.py  llm.py
app/Agents/DeepResearchAgent/: deep_research.py  deep_research_agent.py  rag.py
autogen/: app.py
autogen/graph_agents/: graph.ipynb  graph_agent.py
autogen/outputs/: travel_plan_20251030_130931.txt
chroma_literature/: chroma.sqlite3
chroma_preprocessing/: chroma.sqlite3
chroma_results/: chroma.sqlite3
pythonTest/: app.py
test/: app.py
